--- a/pom.xml
+++ b/pom.xml
@@ -2,15 +2,17 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>asbestos</artifactId>
-        <groupId>gov.nist.asbestos</groupId>
-        <version>1.0.0</version>
-    </parent>
+    <!--<parent>-->
+        <!--<groupId>gov.nist.asbestos</groupId>-->
+        <!--<artifactId>asbestos</artifactId>-->
+        <!--<version>1.0.0</version>-->
+    <!--</parent>-->
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
+    <groupId>gov.nist.asbestos</groupId>
     <artifactId>simapi-test</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <name>simapi-test Maven Webapp</name>
     <!-- FIXME change it to the project's website -->
@@ -26,7 +28,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>gov.nist.tkapi</groupId>
+            <groupId>gov.nist.asbestos</groupId>
             <artifactId>simapi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -187,7 +189,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>${basedir}/src/test/java</source>
+                                <source>${basedir}/src/test/groovy</source>
                             </sources>
                         </configuration>
                     </execution>
