Align with HAPI R4 and Groovy version upgrade to 2.5.2

--- a/pom.xml
+++ b/pom.xml
@@ -8,25 +8,21 @@
         <!--<version>1.0.0</version>-->
     <!--</parent>-->
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>gov.nist.asbestos</groupId>
+        <artifactId>asbestos</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <packaging>war</packaging>
 
-    <groupId>gov.nist.asbestos</groupId>
     <artifactId>simapi-test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>simapi-test Maven Webapp</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-
-        <!--Aligns with spock.version and groovy-eclipse-compiler version-->
-        <groovyVersion>2.3.3</groovyVersion>
-        <spock.version>1.0-groovy-2.3</spock.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -47,158 +43,147 @@
             <version>9.4.16.v20190411</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>${groovyVersion}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.spockframework</groupId>
-            <artifactId>spock-core</artifactId>
-            <version>${spock.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
         <finalName>simapi-test</finalName>
         <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <compilerId>groovy-eclipse-compiler</compilerId>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.9.0-01</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.3.4-01</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-eclipse-compiler</artifactId>
-                <version>2.9.0-01</version>
-                <extensions>true</extensions>
-            </plugin>
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>3.1</version>-->
+                <!--<configuration>-->
+                    <!--<compilerId>groovy-eclipse-compiler</compilerId>-->
+                    <!--<source>1.8</source>-->
+                    <!--<target>1.8</target>-->
+                <!--</configuration>-->
+                <!--<dependencies>-->
+                    <!--<dependency>-->
+                        <!--<groupId>org.codehaus.groovy</groupId>-->
+                        <!--<artifactId>groovy-eclipse-compiler</artifactId>-->
+                        <!--<version>2.9.0-01</version>-->
+                    <!--</dependency>-->
+                    <!--<dependency>-->
+                        <!--<groupId>org.codehaus.groovy</groupId>-->
+                        <!--<artifactId>groovy-eclipse-batch</artifactId>-->
+                        <!--<version>2.3.4-01</version>-->
+                    <!--</dependency>-->
+                <!--</dependencies>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.groovy</groupId>-->
+                <!--<artifactId>groovy-eclipse-compiler</artifactId>-->
+                <!--<version>2.9.0-01</version>-->
+                <!--<extensions>true</extensions>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--&lt;!&ndash;<artifactId>maven-surefire-plugin</artifactId>&ndash;&gt;-->
+                <!--&lt;!&ndash;<version>3.0.0-M3</version>&ndash;&gt;-->
+                <!--<artifactId>maven-failsafe-plugin</artifactId>-->
                 <!--<version>3.0.0-M3</version>-->
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Spec.java</include>
-                        <include>**/*Test.java</include>
-                        <include>**/*IT.java</include>
-                    </includes>
-                    <!-- Exclude tests that disturb other tests or require to be run in complete isolation. -->
-                    <!--<parallel>classes</parallel>-->
-                    <!--<runOrder>alphabetical</runOrder>-->
-                    <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
-                    <!--<redirectTestOutputToFile>true</redirectTestOutputToFile>-->
-                    <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
-                    <!-- We should NOT ignore IT test failures. TestFailureIgnore should be false. -->
-                    <testFailureIgnore>false</testFailureIgnore>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
-                <configuration>
-                    <skipTests>true</skipTests> <!-- We are using Failsafe instead of Surefire, so just set skipTests to true. Otherwise Surefire likes to automatically run all tests that have *Test in the class names in the Unit test phase. -->
-                </configuration>
-            </plugin>
+                <!--<configuration>-->
+                    <!--<includes>-->
+                        <!--<include>**/*Spec.java</include>-->
+                        <!--<include>**/*Test.java</include>-->
+                        <!--<include>**/*IT.java</include>-->
+                    <!--</includes>-->
+                    <!--&lt;!&ndash; Exclude tests that disturb other tests or require to be run in complete isolation. &ndash;&gt;-->
+                    <!--&lt;!&ndash;<parallel>classes</parallel>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<runOrder>alphabetical</runOrder>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<useUnlimitedThreads>true</useUnlimitedThreads>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<redirectTestOutputToFile>true</redirectTestOutputToFile>&ndash;&gt;-->
+                    <!--<forkCount>1</forkCount>-->
+                    <!--<reuseForks>false</reuseForks>-->
+                    <!--&lt;!&ndash; We should NOT ignore IT test failures. TestFailureIgnore should be false. &ndash;&gt;-->
+                    <!--<testFailureIgnore>false</testFailureIgnore>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>integration-test</goal>-->
+                            <!--<goal>verify</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.20</version>-->
+                <!--<configuration>-->
+                    <!--<skipTests>true</skipTests> &lt;!&ndash; We are using Failsafe instead of Surefire, so just set skipTests to true. Otherwise Surefire likes to automatically run all tests that have *Test in the class names in the Unit test phase. &ndash;&gt;-->
+                <!--</configuration>-->
+            <!--</plugin>-->
 
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.2.21.v20170120</version>
-                <configuration>
-                    <!-- Enter any systemProperties here. -->
-                    <jettyXml>${basedir}/src/test/etc/jetty.xml,${basedir}/src/test/etc/jetty-http.xml,${basedir}/src/test/etc/jetty-https.xml,${basedir}/src/test/etc/jetty-ssl.xml,${basedir}/src/test/etc/jetty-logging.xml</jettyXml>
-                    <war>${user.home}/develop/toolkit2/xdstools2/target/xdstools2-7.2.8.war</war>
-                    <stopKey>alpha</stopKey>
-                    <stopPort>9099</stopPort>
-                    <systemProperties>
-                        <systemProperty>
-                            <name>jetty.logs</name>
-                            <value>${basedir}/target</value>
-                        </systemProperty>
-                    </systemProperties>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-jetty</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>deploy-war</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-jetty</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.gmavenplus</groupId>
-                <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.6.3</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>addTestSources</goal>
-                            <goal>compileTests</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>add-groovy-test-source</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>add-test-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>${basedir}/src/test/groovy</source>
-                            </sources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+            <!--<plugin>-->
+                <!--<groupId>org.eclipse.jetty</groupId>-->
+                <!--<artifactId>jetty-maven-plugin</artifactId>-->
+                <!--<version>9.2.21.v20170120</version>-->
+                <!--<configuration>-->
+                    <!--&lt;!&ndash; Enter any systemProperties here. &ndash;&gt;-->
+                    <!--<jettyXml>${basedir}/src/test/etc/jetty.xml,${basedir}/src/test/etc/jetty-http.xml,${basedir}/src/test/etc/jetty-https.xml,${basedir}/src/test/etc/jetty-ssl.xml,${basedir}/src/test/etc/jetty-logging.xml</jettyXml>-->
+                    <!--<war>${user.home}/develop/toolkit2/xdstools2/target/xdstools2-7.2.8.war</war>-->
+                    <!--<stopKey>alpha</stopKey>-->
+                    <!--<stopPort>9099</stopPort>-->
+                    <!--<systemProperties>-->
+                        <!--<systemProperty>-->
+                            <!--<name>jetty.logs</name>-->
+                            <!--<value>${basedir}/target</value>-->
+                        <!--</systemProperty>-->
+                    <!--</systemProperties>-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>start-jetty</id>-->
+                        <!--<phase>pre-integration-test</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>deploy-war</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>stop-jetty</id>-->
+                        <!--<phase>post-integration-test</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>stop</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.gmavenplus</groupId>-->
+                <!--<artifactId>gmavenplus-plugin</artifactId>-->
+                <!--<version>1.6.3</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>addTestSources</goal>-->
+                            <!--<goal>compileTests</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>build-helper-maven-plugin</artifactId>-->
+                <!--<version>3.0.0</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>add-groovy-test-source</id>-->
+                        <!--<phase>integration-test</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>add-test-source</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<sources>-->
+                                <!--<source>${basedir}/src/test/groovy</source>-->
+                            <!--</sources>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
 
     </build>
 
